// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`card > renders with as correctly 1`] = `
"<section data-slot="root" class="">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</section>"
`;

exports[`card > renders with class correctly 1`] = `
"<div data-slot="root" class="rounded-xl">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`card > renders with default slot correctly 1`] = `
"<div data-slot="root" class="">
  <!--v-if-->
  <div data-slot="body" class="">Default slot</div>
  <!--v-if-->
</div>"
`;

exports[`card > renders with description correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="header" class="">
    <!--v-if-->
    <div data-slot="description" class="">Description</div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`card > renders with description slot correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="header" class="">
    <!--v-if-->
    <div data-slot="description" class="">Description slot</div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`card > renders with footer slot correctly 1`] = `
"<div data-slot="root" class="">
  <!--v-if-->
  <!--v-if-->
  <div data-slot="footer" class="">Footer slot</div>
</div>"
`;

exports[`card > renders with header slot correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="header" class="">Header slot</div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`card > renders with title and description correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="header" class="">
    <div data-slot="title" class="">Title</div>
    <div data-slot="description" class="">Description</div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`card > renders with title correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="header" class="">
    <div data-slot="title" class="">Title</div>
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`card > renders with title slot correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="header" class="">
    <div data-slot="title" class="">Title slot</div>
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`card > renders with ui correctly 1`] = `
"<div data-slot="root" class="">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`card > renders with variant outline correctly 1`] = `
"<div data-slot="root" class="">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`card > renders with variant soft correctly 1`] = `
"<div data-slot="root" class="">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`card > renders with variant solid correctly 1`] = `
"<div data-slot="root" class="">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`card > renders with variant subtle correctly 1`] = `
"<div data-slot="root" class="">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;
